force-app/main/default/objects/Assessment_Config__mdt/Assessment_Config__mdt.object-meta.xml
<CustomObject>
    <label>Assessment Config</label>
    <pluralLabel>Assessment Configs</pluralLabel>
</CustomObject>