force-app/main/default/objects/Assessment_Config__mdt/fields/Answer_Key__c.field-meta.xml
<CustomField>
    <fullName>Answer_Key__c</fullName>
    <label>Answer Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>