force-app/main/default/objects/Assessment_Config__mdt/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>