force-app/main/default/objects/Assessment_Config__mdt/fields/Pass_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Pass_Percentage__c</fullName>
    <label>Pass Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>